--- a/OpenAITinker/App.razor
+++ b/OpenAITinker/App.razor
@@ -1,12 +1,31 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿<CascadingValue TValue="string" Value="pageHeader" Name="PageHeader">
+    <Router AppAssembly="@typeof(App).Assembly" OnNavigateAsync="HandleNav">
+        <Found Context="routeData">
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        </Found>
+        <NotFound>
+            <PageTitle>Not found</PageTitle>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p role="alert">Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+   
+</CascadingValue>
+@code
+{
+    private string pageHeader = "Home";
+    private void HandleNav(NavigationContext context)
+    {
+        pageHeader = context.Path switch
+        {
+            "openImage" => "Image Models",
+            "convo" => "Text Models",
+            "code" => "Code Models",
+            "moderation" => "Moderation Models",
+            "edit" => "Text Edit Models",
+            _ => "Home"
+        };
+    }
+}
