--- a/OpenAITinker/Pages/ConversationPage.razor
+++ b/OpenAITinker/Pages/ConversationPage.razor
@@ -1,29 +1,12 @@
 ﻿@page "/convo"
 @using OpenAIDotNet.Models.Requests
-<h3>Completion Page</h3>
-@*<div>
-    <div>
-        <label>
-            comment/question:<br />
-            <input style="width:250px" @bind-value="input" @onkeyup="EnterSubmit" />
-            <button @onclick="Submit">Submit</button>
-        </label>
-    </div>
-    <div style="background-color: black; color:white">
-        @foreach (var bit in convoBits)
-        {
-            <p>
-                <span>@bit.User</span><br />
-                <span style="color:yellow">@bit.Response</span>
-            </p>
-        }
-    </div>
-</div>*@
+<h3 class="text-center">Completions</h3>
+
 <RadzenRow>
-    <RadzenTemplateForm Data="_completionRequest" TItem="CompletionRequestModel" Submit="HandleSubmit">
+    <RadzenTemplateForm Data="_completionRequestForm" TItem="CompletionRequestForm" Submit="HandleSubmit">
         <RadzenRow Style="width:75vw">
             <RadzenColumn Size="8">
-                <RadzenTextArea Style="width:100%; height:30vh" @bind-Value="_completionRequest.Prompt" Placeholder="Add your prompt text here"></RadzenTextArea>
+                <RadzenTextArea Style="width:100%; height:40vh" @bind-Value="_completionRequestForm.Prompt" Placeholder="Add your prompt text here"></RadzenTextArea>
                 <div>
                     <RadzenButton Text="Submit" BusyText="Waiting..." IsBusy="_isBusy" ButtonType="ButtonType.Submit"></RadzenButton>
                 </div>
@@ -31,23 +14,35 @@
             <RadzenColumn Size="4">
                 <div>
                     <RadzenLabel Text="Model"></RadzenLabel><br />
-                    <RadzenDropDown Data="_modelOptions" TextProperty="Key" ValueProperty="Value" @bind-Value="_completionRequest.Model"></RadzenDropDown>
+                    <RadzenDropDown Data="_modelOptions" TextProperty="Key" ValueProperty="Value" @bind-Value="_completionRequestForm.Model"></RadzenDropDown>
                 </div>
                 <div>
-                    <RadzenLabel Text="Tempurature"></RadzenLabel><br />
-                    <RadzenNumeric @bind-Value="_completionRequest.Temperature" Step=".1" Min="0" Max="1"></RadzenNumeric>
+                    <RadzenLabel Component="Tempurature" Text="Tempurature"></RadzenLabel><br />
+                    <RadzenNumeric Name="Tempurature" @bind-Value="_completionRequestForm.Temperature" Step=".1" Min="0" Max="1"></RadzenNumeric>
+                    <RadzenNumericRangeValidator Min="0" Max="1" Component="Tempurature" Popup="true"></RadzenNumericRangeValidator>
                 </div>
                 <div>
-                    <RadzenLabel Text="PresencePenalty"></RadzenLabel><br />
-                    <RadzenNumeric @bind-Value="_completionRequest.PresencePenalty" Step=".1" Min="0" Max="2"></RadzenNumeric>
+                    <RadzenLabel Component="PresencePenalty" Text="PresencePenalty"></RadzenLabel><br />
+                    <RadzenNumeric Name="PresencePenalty" @bind-Value="_completionRequestForm.PresencePenalty" Step=".1" Min="-2" Max="2"></RadzenNumeric>
+                    <RadzenNumericRangeValidator Min="-2" Max="2" Component="PresencePenalty" Popup="true"></RadzenNumericRangeValidator>
                 </div>
                 <div>
-                    <RadzenLabel Text="FrequencyPenalty"></RadzenLabel><br />
-                    <RadzenNumeric @bind-Value="_completionRequest.FrequencyPenalty" Step=".1" Min="0" Max="2"></RadzenNumeric>
+                    <RadzenLabel Component="FrequencyPenalty" Text="FrequencyPenalty"></RadzenLabel><br />
+                    <RadzenNumeric Name="FrequencyPenalty" @bind-Value="_completionRequestForm.FrequencyPenalty" Step=".1" Min="-2" Max="2"></RadzenNumeric>
+                    <RadzenNumericRangeValidator Min="-2" Max="2" Component="FrequencyPenalty" Popup="true"></RadzenNumericRangeValidator>
+                </div>
+                <div>
+                    <RadzenLabel Text="Number"></RadzenLabel><br />
+                    <RadzenNumeric @bind-Value="_completionRequestForm.Number" Step="1" Min="1" Max="5"></RadzenNumeric>
+                </div>
+                <div>
+                    <RadzenLabel Component="BestOf" Text="Best of"></RadzenLabel><br />
+                    <RadzenNumeric Name="BestOf" @bind-Value="_completionRequestForm.BestOf" Step="1" Min="1"></RadzenNumeric><br />
+                    <RadzenCompareValidator Component="BestOf" Value="_completionRequestForm.Number" Operator="CompareOperator.GreaterThan" Text="Best of has to be greater than Number" Popup="false"></RadzenCompareValidator>
                 </div>
                 <div>
                     <RadzenLabel Text="Comma Seperated Stops"></RadzenLabel><br />
-                    <RadzenTextBox @bind-Value="_stopInput" Step=".1" Min="0" Max="2"></RadzenTextBox>
+                    <RadzenTextBox @bind-Value="_completionRequestForm.StopInput"></RadzenTextBox>
                 </div>
             </RadzenColumn>
         </RadzenRow>
@@ -60,10 +55,11 @@
         {
             @foreach (var choice in _completionResponse.Choices)
             {
-                <div>Index: @choice.Index</div>
-                <div>Text: @choice.Text</div>
-                <div>Finish Reason: @choice.FinishReason</div>
-                <hr />
+                <RadzenCard>
+                    <div>Index: @choice.Index</div>
+                    <div>Text: @choice.Text</div>
+                    <div>Finish Reason: @choice.FinishReason</div>
+                </RadzenCard>
             }
         }
     </div>
