--- a/OpenAITinker/Pages/OpenAiImagePage.razor.css
+++ b/OpenAITinker/Pages/OpenAiImagePage.razor.css
@@ -11,7 +11,10 @@
 }
 .form-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'mid mid sm' 
+                         'lrg lrg lrg'
+                         'btn . .';
+    /*grid-template-columns: 1fr 1fr;*/
     column-gap: 1rem;
     row-gap: .5rem;
 }
