--- a/OpenAITinker/Shared/MainLayout.razor.css
+++ b/OpenAITinker/Shared/MainLayout.razor.css
@@ -57,7 +57,7 @@ main {
 
     .sidebar {
         width: 250px;
-        height: 100vh;
+        height: 100%;
         position: sticky;
         top: 0;
     }
