--- a/OpenAITinker/Shared/NavMenu.razor
+++ b/OpenAITinker/Shared/NavMenu.razor
@@ -29,6 +29,16 @@
                 <span class="oi oi-code" aria-hidden="true"></span> Code Models
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="moderation">
+                <span class="oi oi-beaker" aria-hidden="true"></span> Moderation Models
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="edit">
+                <span class="oi oi-envelope-open" aria-hidden="true"></span> Edit Models
+            </NavLink>
+        </div>
     </nav>
 </div>
 
