add embedding completion. Start adding fine-tuning to sdk

--- a/OpenAITinker/App.razor
+++ b/OpenAITinker/App.razor
@@ -25,6 +25,7 @@
             "code" => "Code Models",
             "moderation" => "Moderation Models",
             "edit" => "Text Edit Models",
+            "embed" => "Embeddings?",
             _ => "Home"
         };
     }
