--- a/OpenAITinker/Pages/OpenAiImagePage.razor
+++ b/OpenAITinker/Pages/OpenAiImagePage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/openImage"
 @using ImageEditor.Components
 @using ImageEditor.Models
+@using ImageSize = ImageEditor.Models.ImageSize
 <RadzenTabs>
     <Tabs>
         <RadzenTabsItem Text="Alter Images">
