--- a/OpenAITinker/_Imports.razor
+++ b/OpenAITinker/_Imports.razor
@@ -10,3 +10,5 @@
 @using OpenAITinker.Shared
 @using Radzen
 @using Radzen.Blazor
+@using OpenAIDotNet.Models.Requests
+@using OpenAIDotNet.Models.Responses
