--- a/OpenAITinker/Pages/Index.razor
+++ b/OpenAITinker/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-center">OpenAI GPT-3 using OpenAIDotNet (c# SDK)</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<RadzenLink Target="_blank" Path="https://beta.openai.com/" Text="Learn more about OpenAI GPT-3 API"></RadzenLink>
