--- a/OpenAITinker/Shared/NavMenu.razor
+++ b/OpenAITinker/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-envelope-open" aria-hidden="true"></span> Edit Models
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="embed">
+                <span class="oi oi-envelope-open" aria-hidden="true"></span> Embeddings?
+            </NavLink>
+        </div>
     </nav>
 </div>
 
