--- a/OpenAITinker/Shared/NavMenu.razor
+++ b/OpenAITinker/Shared/NavMenu.razor
@@ -41,7 +41,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="embed">
-                <span class="oi oi-envelope-open" aria-hidden="true"></span> Embeddings?
+                <span class="oi oi-envelope-open" aria-hidden="true"></span> Embeddings
             </NavLink>
         </div>
     </nav>
