--- a/OpenAITinker/Pages/EmbeddingPage.razor
+++ b/OpenAITinker/Pages/EmbeddingPage.razor
@@ -1,12 +1,12 @@
 ﻿@page "/embed"
 <RadzenRow>
     <RadzenColumn Size="6">
-        <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" Text="Input and Submit 2 or more"></RadzenText>
-        <RadzenTextArea Style="width:100%; height:20rem" @bind-Value="_input"></RadzenTextArea><br />
+        <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" TagName="TagName.H5" Text="Input and Submit 2 or more"></RadzenText>
+        <RadzenTextArea Style="width:100%; height:18rem" @bind-Value="_input"></RadzenTextArea><br />
         <RadzenButton Text="Request Embedding" BusyText="Requsting Embedding..." Click="Submit" IsBusy="_isBusy"></RadzenButton>
     </RadzenColumn>
     <RadzenColumn Size="6">
-        <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" Text="Use Embeddings to Show Similarity"></RadzenText>
+        <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" TagName="TagName.H5" Text="Use Embeddings to Show Similarity"></RadzenText>
         <RadzenTabs SelectedIndexChanged="HandleTabChange">
             <Tabs>
                 <RadzenTabsItem Text="Many to Many">
