--- a/OpenAITinker/Shared/MainLayout.razor.css
+++ b/OpenAITinker/Shared/MainLayout.razor.css
@@ -56,7 +56,7 @@ main {
     }
 
     .sidebar {
-        width: 250px;
+        /*width: 250px;*/
         height: 100%;
         position: sticky;
         top: 0;
@@ -78,4 +78,7 @@ main {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
+}
+.githubIcon {
+    content: url('css/icons/GitHub-Mark-32px.png');
 }
