--- a/OpenAITinker/Shared/NavMenu.razor
+++ b/OpenAITinker/Shared/NavMenu.razor
@@ -1,13 +1,13 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">OpenAITinker</a>
+        <a class="navbar-brand" href="">OpenAIDotNet Demo</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -36,12 +36,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="edit">
-                <span class="oi oi-envelope-open" aria-hidden="true"></span> Edit Models
+                <span class="oi oi-envelope-open" aria-hidden="true"></span> Text Editing
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="embed">
-                <span class="oi oi-envelope-open" aria-hidden="true"></span> Embeddings
+                <span class="oi oi-calculator" aria-hidden="true"></span> Embeddings
             </NavLink>
         </div>
     </nav>
