--- a/OpenAITinker/Pages/Index.razor
+++ b/OpenAITinker/Pages/Index.razor
@@ -8,94 +8,136 @@
 <div class="text-center"><RadzenLink Target="_blank" Path="https://platform.openai.com/overview" Text="Learn more about OpenAI GPT-3 API"></RadzenLink></div>
 
 <RadzenRow>
-    <RadzenColumn Size="2"></RadzenColumn>
-    <RadzenColumn Size="8">
+    <RadzenColumn SizeLG="2" SizeXS="0"></RadzenColumn>
+    <RadzenColumn SizeLG="8" SizeXS="12">
         <RadzenCard Style="width: 100%">
             <RadzenPanel AllowCollapse="true" Collapsed="true">
                 <HeaderTemplate>
                     <h4 class="m-0 d-flex align-items-center">
-                        <span class="oi oi-list-rich" style="margin-right:8px; margin-bottom: 2px;  font-size:1.25rem"></span><b>Images</b>
+                        <span class="oi oi-list-rich"></span><b>Images</b>
                     </h4>
                 </HeaderTemplate>
                 <ChildContent>
-                    <RadzenCard>
+                    <RadzenCard Style="font-family: math;">
                         <p style="font-style: italic">Accoring to ChatGPT:</p><br/>
-                        @Helpers.ImageDescription
+                        @Helpers.GetContent("Images").Description
                         <br/>
-                        <div style="font-size: 110%;" class="text-center rz-color-primary-dark">
-                            <RadzenLink Style="color: var(--rz-primary-dark)" Path="openImage" Text="Try it"></RadzenLink>
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="openImage" Text="Try it!"></RadzenLink>
                         </div>
                         
                     </RadzenCard>
                 </ChildContent>
                 <SummaryTemplate>
-                    OpenAI's GPT-3 API offers advanced image services with DALL·E for unique image generation.
+                    @Helpers.GetContent("Images").Short
                 </SummaryTemplate>
             </RadzenPanel>
             <RadzenPanel AllowCollapse="true" Collapsed="true">
                 <HeaderTemplate>
                     <h4 class="m-0 d-flex align-items-center">
-                        <span class="oi oi-chat" style="margin-right:8px; margin-bottom: 2px; font-size:1.25rem"></span><b>Text Completions (chat)</b>
+                        <span class="oi oi-chat" ></span><b>Text Completions (chat)</b>
                     </h4>
                 </HeaderTemplate>
                 <ChildContent>
-                    <RadzenCard>
+                    <RadzenCard Style="font-family: math;">
                         <p style="font-style: italic">Accoring to ChatGPT:</p><br/>
-                        @Helpers.CompletionsDescription
+                        @Helpers.GetContent("Completions").Description
                         <br/>
-                        <div style="font-size: 110%;" class="text-center rz-color-primary-dark">
-                            <RadzenLink Style="color: var(--rz-primary-dark)" Path="convo" Text="Try it"></RadzenLink>
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="convo" Text="Try it!"></RadzenLink>
                         </div>
                         
                     </RadzenCard>
                 </ChildContent>
                 <SummaryTemplate>
-                    OpenAI's GPT-3 Completions API generates accurate and human-like text completions for a variety of applications.
+                    @Helpers.GetContent("Completions").Short
                 </SummaryTemplate>
             </RadzenPanel>
             <RadzenPanel AllowCollapse="true" Collapsed="true">
                 <HeaderTemplate>
                     <h4 class="m-0 d-flex align-items-center">
-                        <span class="oi oi-code" style="margin-right: 8px; margin-bottom: 4px;  font-size:1.25rem"></span><b>Code Models</b>
+                        <span class="oi oi-code" ></span><b>Code Models</b>
                     </h4>
                 </HeaderTemplate>
                 <ChildContent>
-                    <RadzenCard>
+                    <RadzenCard Style="font-family: math;">
                         <p style="font-style: italic">Accoring to ChatGPT:</p><br />
-                        @Helpers.CodeDescription
+                        @Helpers.GetContent("Code").Description
                         <br />
-                        <div style="font-size: 110%;" class="text-center rz-color-primary-dark">
-                            <RadzenLink Style="color: var(--rz-primary-dark)" Path="code" Text="Try it"></RadzenLink>
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="code" Text="Try it!"></RadzenLink>
                         </div>
 
                     </RadzenCard>
                 </ChildContent>
                 <SummaryTemplate>
-                    The OpenAI GPT-3 API Codex Models Offer Powerful Solutions for Code Generation and Explanation.
+                    @Helpers.GetContent("Code").Short
                 </SummaryTemplate>
             </RadzenPanel>
             <RadzenPanel AllowCollapse="true" Collapsed="true">
                 <HeaderTemplate>
                     <h4 class="m-0 d-flex align-items-center">
-                        <span class="oi oi-beaker" style="margin-right: 8px; margin-bottom: 4px; font-size:1.25rem"></span><b>Moderation</b>
+                        <span class="oi oi-beaker" ></span><b>Moderation</b>
                     </h4>
                 </HeaderTemplate>
                 <ChildContent>
-                    <RadzenCard>
+                    <RadzenCard Style="font-family: math;">
                         <p style="font-style: italic">Accoring to ChatGPT:</p><br />
-                        @Helpers.ModerationDescription
+                        @Helpers.GetContent("Moderation").Description
                         <br />
-                        <div style="font-size: 110%;" class="text-center rz-color-primary-dark">
-                            <RadzenLink Style="color: var(--rz-primary-dark)" Path="moderation" Text="Try it"></RadzenLink>
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="moderation" Text="Try it!"></RadzenLink>
                         </div>
 
                     </RadzenCard>
                 </ChildContent>
                 <SummaryTemplate>
-                    OpenAI's GPT-3 API provides advanced moderation services for accurately classifying and filtering inappropriate text content.
+                    @Helpers.GetContent("Moderation").Short
+                </SummaryTemplate>
+            </RadzenPanel>
+            <RadzenPanel AllowCollapse="true" Collapsed="true">
+                <HeaderTemplate>
+                    <h4 class="m-0 d-flex align-items-center">
+                        <span class="oi oi-envelope-open"></span><b>Text Editing</b>
+                    </h4>
+                </HeaderTemplate>
+                <ChildContent>
+                    <RadzenCard Style="font-family: math;">
+                        <p style="font-style: italic">Accoring to ChatGPT:</p><br />
+                        @Helpers.GetContent("Edits").Description
+                        <br />
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="edit" Text="Try it!"></RadzenLink>
+                        </div>
+
+                    </RadzenCard>
+                </ChildContent>
+                <SummaryTemplate>
+                    @Helpers.GetContent("Edits").Short
+                </SummaryTemplate>
+            </RadzenPanel>
+            <RadzenPanel AllowCollapse="true" Collapsed="true">
+                <HeaderTemplate>
+                    <h4 class="m-0 d-flex align-items-center">
+                        <span class="oi oi-calculator"></span><b>Embeddings</b>
+                    </h4>
+                </HeaderTemplate>
+                <ChildContent>
+                    <RadzenCard Style="font-family: math;">
+                        <p style="font-style: italic">Accoring to ChatGPT:</p><br />
+                        @Helpers.GetContent("Embeddings").Description
+                        <br />
+                        <div style="font-size: 125%;" class="rz-color-primary-dark">
+                            <RadzenLink Style="color: var(--rz-primary-darker)" Path="embed" Text="Try it!"></RadzenLink>
+                        </div>
+
+                    </RadzenCard>
+                </ChildContent>
+                <SummaryTemplate>
+                    @Helpers.GetContent("Embeddings").Short
                 </SummaryTemplate>
             </RadzenPanel>
         </RadzenCard>
     </RadzenColumn>
-    <RadzenColumn Size="2"></RadzenColumn>
+    <RadzenColumn SizeLG="2" SizeXS="0"></RadzenColumn>
 </RadzenRow>
