--- a/OpenAITinker/Shared/NavMenu.razor
+++ b/OpenAITinker/Shared/NavMenu.razor
@@ -31,7 +31,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="moderation">
-                <span class="oi oi-beaker" aria-hidden="true"></span> Moderation Models
+                <span class="oi oi-beaker" aria-hidden="true"></span> Moderation
             </NavLink>
         </div>
         <div class="nav-item px-3">
