--- a/OpenAITinker/Pages/EmbeddingPage.razor
+++ b/OpenAITinker/Pages/EmbeddingPage.razor
@@ -2,8 +2,16 @@
 <RadzenRow>
     <RadzenColumn Size="6">
         <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" TagName="TagName.H5" Text="Input and Submit 2 or more"></RadzenText>
-        <RadzenTextArea Style="width:100%; height:18rem" @bind-Value="_input"></RadzenTextArea><br />
-        <RadzenButton Text="Request Embedding" BusyText="Requsting Embedding..." Click="Submit" IsBusy="_isBusy"></RadzenButton>
+        @*<RadzenTextArea Style="width:100%; height:8rem" @bind-Value="_input"></RadzenTextArea><br />*@
+        @foreach (var input in _inputs)
+        {
+            <RadzenTextArea Style="width:100%; height:4rem" @bind-Value="input.Value"></RadzenTextArea>
+            <br />
+            <RadzenButton Icon="add_circle_outline" ButtonStyle="ButtonStyle.Primary" Click="AddInput"></RadzenButton>
+            <RadzenButton Icon="remove_circle_outline" ButtonStyle="ButtonStyle.Secondary" Click="@(() => RemoveInput(input.Id))"></RadzenButton>
+            <br />
+        }
+        <RadzenButton Disabled="@(_inputs.Count <= 1)" Text="Request Embeddings" BusyText="Requsting Embeddings..." Click="Submit" IsBusy="_isBusy"></RadzenButton>
     </RadzenColumn>
     <RadzenColumn Size="6">
         <RadzenText TextAlign="TextAlign.Center" TextStyle="TextStyle.DisplayH5" TagName="TagName.H5" Text="Use Embeddings to Show Similarity"></RadzenText>
